# Provinces

./: data.txt  main.py  mesh.stl  pyproject.toml
meshes/: mesh10.stl  mesh100.stl  mesh1000.stl  mesh1001.stl  mesh1002.stl  mesh1003.stl  mesh1004.stl  mesh1005.stl  mesh1006.stl  mesh1007.stl  mesh1008.stl  mesh1009.stl  mesh1010.stl  mesh1011.stl  mesh1012.stl  mesh1013.stl  mesh1014.stl  mesh1015.stl  mesh1016.stl  mesh1017.stl  mesh1019.stl  mesh1020.stl  mesh1022.stl  mesh1023.stl  mesh1024.stl  mesh1027.stl  mesh1028.stl  mesh1029.stl  mesh103.stl  mesh1030.stl  mesh1031.stl  mesh1032.stl  mesh1033.stl  mesh1034.stl  mesh1035.stl  mesh1036.stl  mesh1037.stl  mesh1038.stl  mesh1039.stl  mesh1040.stl  (+3357 more)
