[tool.poetry]
name = "provinces"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^1.7.1"
trimesh = "^3.9.1"
triangle = "^20200424"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
